# inventory-monitor-plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
docs/: graphql-filters.md  netbox-attachments.md  rma-workflow.md
inventory_monitor/: __init__.py  helpers.py  navigation.py  settings.py  template_content.py
inventory_monitor/api/: serializers.py
inventory_monitor/filtersets/: asset.py  asset_service.py  contract.py  contractor.py  invoice.py  probe.py
inventory_monitor/forms/: __init__.py  asset.py  asset_service.py  asset_type.py  contract.py  contractor.py  external_inventory.py  invoice.py  probe.py  rma.py
inventory_monitor/graphql/: filters.py
inventory_monitor/migrations/: 0005_remove_assettype_redundant_indexes.py
inventory_monitor/models/: asset.py  asset_service.py  asset_type.py  contract.py  contractor.py  external_inventory.py  invoice.py  mixins.py  probe.py  rma.py
inventory_monitor/tables/: asset.py  asset_service.py  contract.py  external_inventory.py  invoice.py  probe.py
inventory_monitor/templates/inventory_monitor/: asset.html  assetservice.html  contract.html  contract_service_assets.html  contractor.html  externalinventory.html  invoice.html  rma.html
inventory_monitor/templates/inventory_monitor/inc/: external_inventory_rma_extension.html  status_badge.html
inventory_monitor/views/: __init__.py  asset.py  asset_service.py  asset_type.py  contract.py  contractor.py  external_inventory.py  invoice.py  probe.py  rma.py
