[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-monitor"
dynamic = ["version"]
description = "Asset Management with semi-auto discovery processes"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Jan Krupa"},
]
keywords = ["netbox", "netbox-plugin"]
classifiers = [
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/CESNET/inventory-monitor-plugin"
Source = "https://github.com/CESNET/inventory-monitor-plugin"
Issues = "https://github.com/CESNET/inventory-monitor-plugin/issues"

[tool.setuptools.dynamic]
version = {attr = "inventory_monitor.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_monitor*"]

[tool.setuptools.package-data]
inventory_monitor = ["**/*", "templates/**"]

[tool.setuptools.exclude-package-data]
inventory_monitor = ["**/__pycache__/*", "**/*.py[cod]"]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# HTML template strings in tables contain long Django template URLs that cannot be split
"inventory_monitor/tables/asset.py" = ["E501"]
"inventory_monitor/tables/external_inventory.py" = ["E501"]
